# Py4GW_Reforged_Native

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  grep.exe.stackdump
docs/: 12-project-style-guide.md  binding-parity-audit.md  callback-crash-isolation-plan.md  json-factory-design.md  legacy-migration-checklist.md  module-migration-guide.md  occluded-overlay-drawing.md  parity-report-2026-06-28.md  python-migration-layers-analysis.md  python-migration-progress.md  python-migration-restart-handover.md  shared-memory-remigration.md
docs/RE/: README.md  item_gadget_recolor_reverse_engineering.md  loot_beam_occlusion_plan.md  name_tag_color_reverse_engineering.md  native_dialog_layout_process.md
include/GW/agent/: agent.h
include/GW/agent_recolor/: agent_recolor.h
include/GW/camera/: camera.h
include/GW/chat/: chat.h
include/GW/chat_commands/: chat_commands.h
include/GW/common/: game_pos.h  stoc.h
include/GW/common/constants/: ui.h
include/GW/context/: agent.h  party.h  skill.h  world_context.h
include/GW/effects/: effects.h
include/GW/events/: events.h
include/GW/friend_list/: friend_list.h
include/GW/game_thread/: game_thread.h
include/GW/item/: item.h
include/GW/map/: map.h
include/GW/merchant/: merchant.h
include/GW/multibox/: manager.h
include/GW/native_ui/: native_ui.h
include/GW/party/: party.h
include/GW/player/: player.h
include/GW/quest/: quest.h
include/GW/render/: render.h
include/GW/shared_memory/: manager.h
include/GW/skillbar/: skill_names.h  skillbar.h
include/GW/stoc/: stoc.h
include/GW/trade/: trade.h
include/GW/ui/: ui.h
include/GW/world_render/: world_render.h
include/base/: CrashHandler.h  bind_helpers.h  imvec_caster.h  py_bindings.h
include/callback/: callback.h
include/imgui/: bindings.h  font_manager.h  imgui_manager.h
include/imgui/ext/: ext.h
include/json/: json_factory.h
include/listeners/: auto_cancel_ua_listener.h  auto_open_chest_listener.h  auto_return_listener.h  cinematic_skip_listener.h  faction_donate_listener.h  faction_warning_listener.h  keep_quest_listener.h  listeners.h  memory_patch_listeners.h  signet_capture_listener.h  skill_filter_listener.h
include/overlay/: dx_overlay.h
include/settings/: settings.h
offsets/: agent.json  agent_recolor.json  chat.json  item.json  listeners.json  map.json  merchant.json  party.json  quest.json  render.json  skillbar.json  ui.json  world_render.json
scripts/: PyImGui.pyi  imgui_demo.py  pyimgui.py  texture_test.py
src/: Py4GW.cpp  dllmain.cpp
src/GW/: GuildWars.cpp
src/GW/agent/: agent.cpp  agent_bindings.cpp  agent_methods.cpp
src/GW/agent_recolor/: agent_recolor.cpp  agent_recolor_bindings.cpp  agent_recolor_patterns.cpp
src/GW/camera/: camera.cpp  camera_bindings.cpp  camera_methods.cpp
src/GW/chat/: chat.cpp  chat_bindings.cpp  chat_methods.cpp
src/GW/chat_commands/: chat_commands.cpp  chat_commands_bindings.cpp
src/GW/dialog/: dialog_bindings.cpp
src/GW/effects/: effects.cpp  effects_bindings.cpp  effects_methods.cpp
src/GW/events/: events.cpp  events_methods.cpp
src/GW/friend_list/: friend_list.cpp  friend_list_bindings.cpp  friend_list_methods.cpp
src/GW/game_thread/: game_thread.cpp  game_thread_bindings.cpp  game_thread_methods.cpp
src/GW/guild/: guild_bindings.cpp
src/GW/item/: inventory_bindings.cpp  item.cpp  item_bindings.cpp  item_methods.cpp
src/GW/map/: map.cpp  map_bindings.cpp  map_methods.cpp
src/GW/merchant/: merchant.cpp  merchant_bindings.cpp  merchant_methods.cpp
src/GW/multibox/: manager.cpp
src/GW/name_obfuscator/: name_obfuscator_bindings.cpp
src/GW/native_ui/: native_ui.cpp
src/GW/packet_sniffer/: packet_sniffer_bindings.cpp
src/GW/party/: party.cpp  party_bindings.cpp  party_methods.cpp
src/GW/pathing/: pathing_bindings.cpp
src/GW/ping/: ping_bindings.cpp
src/GW/player/: player.cpp  player_bindings.cpp  player_methods.cpp
src/GW/quest/: quest.cpp  quest_bindings.cpp  quest_methods.cpp
src/GW/render/: render.cpp  render_bindings.cpp  render_methods.cpp
src/GW/shared_memory/: manager.cpp
src/GW/skillbar/: skill_bindings.cpp  skill_names.cpp  skillbar.cpp  skillbar_bindings.cpp  skillbar_methods.cpp
src/GW/stoc/: stoc.cpp  stoc_methods.cpp
src/GW/textures/: texture_bindings.cpp
src/GW/trade/: trade.cpp  trade_bindings.cpp  trade_methods.cpp
src/GW/ui/: ui.cpp  ui_bindings.cpp  ui_methods.cpp
src/GW/world_render/: world_render.cpp  world_render_bindings.cpp  world_render_patterns.cpp
src/base/: CrashHandler.cpp  python_runtime.cpp  scanner_bindings.cpp
src/callback/: callback.cpp  callback_bindings.cpp
src/imgui/: compact_ui.cpp  console_host_ui.cpp  console_ui.cpp  font_manager.cpp  imgui_bindings.cpp  imgui_manager.cpp  test_ui.cpp
src/imgui/addons/: filebrowser_demo.cpp
src/imgui/bindings/: addons.cpp  drawlist.cpp  enums.cpp  implot.cpp  io.cpp  style.cpp  types.cpp
src/json/: json_factory.cpp  json_factory_bindings.cpp  json_factory_methods.cpp
src/listeners/: agent_events_bindings.cpp  auto_cancel_ua_listener.cpp  auto_open_chest_listener.cpp  auto_return_listener.cpp  cinematic_skip_listener.cpp  faction_donate_listener.cpp  faction_warning_listener.cpp  keep_quest_listener.cpp  listeners.cpp  listeners_bindings.cpp  memory_patch_listeners.cpp  signet_capture_listener.cpp  skill_filter_listener.cpp
src/overlay/: dx_overlay.cpp  dx_overlay_bindings.cpp  overlay.cpp  overlay_bindings.cpp  particle_system_bindings.cpp
src/profiler/: profiler_bindings.cpp
src/settings/: settings.cpp  settings_bindings.cpp
src/system/: system_bindings.cpp  system_methods.cpp
src/virtual_input/: virtual_input_bindings.cpp
